--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,16 @@
         </a>
      
     	<!-- Be sure to leave the brand out there if you want it shown -->
-    	<a class="brand" href="#">Ian's App</a>
+    	  <%= link_to 'Firehose', root_path,  :class => 'brand' %>
      
     	<!-- Everything you want hidden at 940px or less, place within here -->
     	<div class="nav-collapse collapse">
     	 <ul class="nav">
         <li>
-          <%= link_to 'My App', '#' %>
+          <%= link_to 'My App', pics_path %>
+        </li>
+        <li>
+          <%= link_to 'New Pic', new_pic_path %>
         </li>
        </ul>
         <!-- .nav, .navbar-search, .navbar-form, etc -->
