refining the html layout

--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -1,7 +1,10 @@
-<h2>These are my pictures</h2>
+
+<div class="custom-font">
+
+<h2 class= "cool-font-big text-center">My Web Development Journey</h2>
 
 <% @pics.each do |pic| %>
-	<div>
+	<div class="boxy span3">
 		<h2>
 			Hour <%= pic.hour %>
 		</h2>
@@ -13,5 +16,5 @@
 
             <%= pic.learned %> 
 		</p>
-	<div>
+	</div>
 <% end %>
