--- a/app/views/staticpage/index.html.erb
+++ b/app/views/staticpage/index.html.erb
@@ -1,6 +1,6 @@
 <div class="custom-font boxy span6 offset3 text-center">
-	<h1>Hi I'm Ian</h1>
-	<h2>I'm learning Ruby on Rails so that I can build awesome software</h2>
+	<h1 class="cool-font-big"> Hi I'm Ian</h1>
+	<h2 class="cool-font-small">I'm learning Ruby on Rails so that I can build awesome software</h2>
 
 	<%= link_to 'Launch', pics_path, :class => 'btn btn-warning btn-large' %>
 </div>
