--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -10,3 +10,13 @@ body {
 .custom-font {
 	color: white;
 }
+.cool-font-big {
+	font-family: Helvetica Neue Light, Helvetica Neue,Helvetica,sans-serif;
+	font-size: 64px;
+	font-weight: 100;
+}	
+.cool-font-small {
+	font-family: Helvetica Neue Light, Helvetica Neue,Helvetica,sans-serif;
+	font-size: 32px;
+	font-weight: 100;
+}
