--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -1,11 +1,17 @@
-<h2>Upload You Stuff</h2>
+<div class="custom-font span6 offset3 text-center boxy">
+
+<h2 class="cool-font-small">Upload You Stuff</h2>
 
 <%= simple_form_for @pic do |f| %>
-<%= f.input :hour %>
+<%= f.input :hour, label: 'Which Hour', placeholder: 'Enter the Hour' %>
 
-	<%= f.input :emotion %>
-	<%= f.input :learned %>
+	<%= f.input :emotion, label: 'How did you feel', placeholder: 'Happy, Stoked, Awesome, Angry' %>
+	<%= f.input :learned, label: 'What did you learn', placeholder: 'CSS, HTML5, Rails, Ruby, GitHub, Portgres, Heroku', :input_html => {rows: '3'}  %>
 
-<%= submit_tag 'Submit' %>
+<br/>
+
+<%= submit_tag 'Submit',  :class=> 'btn btn-warning btn-large' %>
+
+
 
 <% end %>
