--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -8,6 +8,9 @@
 		<h2>
 			Hour <%= pic.hour %>
 		</h2>
+		<div>
+			<%= image_tag pic.image.to_s %>
+		</div>
 		<p>
             <%= pic.emotion %>
 		</p>
