--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -4,6 +4,7 @@
 
 <%= simple_form_for @pic do |f| %>
 <%= f.input :hour, label: 'Which Hour', placeholder: 'Enter the Hour' %>
+<%= f.input :image, :as=> :file%>
 
 	<%= f.input :emotion, label: 'How did you feel', placeholder: 'Happy, Stoked, Awesome, Angry' %>
 	<%= f.input :learned, label: 'What did you learn', placeholder: 'CSS, HTML5, Rails, Ruby, GitHub, Portgres, Heroku', :input_html => {rows: '3'}  %>
