added user oauth via device gen

--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -10,6 +10,7 @@
 	<%= f.input :learned, label: 'What did you learn', placeholder: 'CSS, HTML5, Rails, Ruby, GitHub, Portgres, Heroku', :input_html => {rows: '3'}  %>
 
 <br/>
+<%= link_to 'Cancel', pics_path, :class => 'btn btn-large' %>
 
 <%= submit_tag 'Submit',  :class=> 'btn btn-warning btn-large' %>
 
