--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -20,4 +20,15 @@
             <%= pic.learned %> 
 		</p>
 	</div>
+<% if pic.user.present? %>
+<p>
+<b>Email:</b>
+<%= pic.user.email %>
+</p>
+
+<%end %>
+
+
+
+
 <% end %>
